fix/responsiveness on smaller devices

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -342,6 +342,11 @@
   .theme-doc-footer {
     padding: 2rem;
   }
+
+  [class*='col col--6'] {
+    width: 90% !important;
+    padding: 0 !important;
+  }
 }
 
 #__docusaurus {
